fix overlay covering the whole screen

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -28,8 +28,3 @@ body::-webkit-scrollbar {
     src: local(""),
     url("assets/fonts/nunito-v16-latin-regular.woff2") format("woff2");
 }
-
-#app {
-    height: 100vh;
-    text-align: center;
-}
